# python_repo

./: pyproject.toml
apidemo/apidemo/: settings.py  urls.py
